The management console page no longer introduces l10n.js
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I8b04cc8bd6f9617aed21963bfe16c8a6d5893bb8

--- a/ossii/browser/admin/admin.html
+++ b/ossii/browser/admin/admin.html
@@ -14,9 +14,8 @@
 	<link rel="stylesheet" href="%ADMIN_ROOT%/css/vex-theme-default.css">
 	<link rel="stylesheet" href="%ADMIN_ROOT%/css/admin.css">
 	</style>
-	<!-- 引入 l10n.js, global.js, color-scheme-switcher.js -->
+	<!-- 引入 jquery.min.js vex.combind.mion.js global.js, color-scheme-switcher.js -->
 	<script src="%ADMIN_ROOT%/js/jquery.min.js"></script>
-	<script src="%ADMIN_ROOT%/js/l10n.js"></script>
 	<script src="%ADMIN_ROOT%/js/vex.combined.min.js"></script>
 	<script src="%ADMIN_ROOT%/js/global.js"></script>
 	<script src="%ADMIN_ROOT%/js/color-scheme-switcher.js"></script>
