Admin console requires l10n.js
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: Ifa27db03302b391d95b164f9bccafefd520aa0cb

--- a/ossii/browser/admin/login.html
+++ b/ossii/browser/admin/login.html
@@ -13,6 +13,8 @@
 	<link rel="stylesheet" href="%ADMIN_ROOT%/css/bootstrap.min.css">
 	<link rel="stylesheet" href="%ADMIN_ROOT%/css/bootstrap-icons.min.css">
 	<link rel="stylesheet" href="%ADMIN_ROOT%/css/login.css">
+
+	<script src="%ADMIN_ROOT%/js/l10n.js"></script>
 	<script src="%ADMIN_ROOT%/js/global.js"></script>
 	<script src="%ADMIN_ROOT%/js/color-scheme-switcher.js"></script>
 </head>
