--- a/ossii/browser/admin/admin.html
+++ b/ossii/browser/admin/admin.html
@@ -13,8 +13,8 @@
 	<link rel="stylesheet" href="%ADMIN_ROOT%/css/vex.css">
 	<link rel="stylesheet" href="%ADMIN_ROOT%/css/vex-theme-default.css">
 	<link rel="stylesheet" href="%ADMIN_ROOT%/css/admin.css">
-	</style>
-	<!-- 引入 jquery.min.js vex.combind.mion.js global.js, color-scheme-switcher.js -->
+
+	<script src="%ADMIN_ROOT%/js/l10n.js"></script>
 	<script src="%ADMIN_ROOT%/js/jquery.min.js"></script>
 	<script src="%ADMIN_ROOT%/js/vex.combined.min.js"></script>
 	<script src="%ADMIN_ROOT%/js/global.js"></script>
