Complement localized languages.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: Ie757bde8fa77bce40d6a19a55d485d5581256754

--- a/ossii/browser/admin/login.html
+++ b/ossii/browser/admin/login.html
@@ -42,7 +42,7 @@
 				<button class="btn btn-primary w-100 py-2" type="submit" _="Sign in"></button>
 			</form>
 		</div>
-		<p class="text-center" _="© %YEAR% OSS Integral Institute Co., Ltd."></p>
+		<p class="text-center" _="OSS Integral Institute Co., Ltd. All rights reserved."></p>
 	</main>
 
 	<!-- 從 js/ 引入 bootstrap.bundle.min.js -->
