Fixed typo "detial" -> "detail"
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I06087804c2f95e885476d21960297a48f93aff02

--- a/ossii/src/development-tools/module-template/admin/admin.html
+++ b/ossii/src/development-tools/module-template/admin/admin.html
@@ -5,7 +5,7 @@
 
 <P class="fs-2" _="This is an example of module management."></P>
 <button type="button" id="hello" class="btn btn-primary">Say "HELLO"</button>
-<table class="table table-success table-bordered caption-top" id="detial">
+<table class="table table-success table-bordered caption-top" id="detail">
 	<caption _="Module Details:"></caption>
 	<thead>
 		<tr>
