Optimize Admin Console.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I6f3d0cbb936d6972dce6bf1f863ea97778163609

--- a/ossii/browser/admin/admin.html
+++ b/ossii/browser/admin/admin.html
@@ -25,9 +25,7 @@
 	<span class="d-none" id="__ADMIN_ROOT__">%ADMIN_ROOT%</span>
 	<header class="navbar sticky-top bg-body-tertiary flex-md-nowrap p-0 shadow">
 		<div class="container-fluid">
-			<img src="images/online.svg"
-				class="d-flex align-items-center col-lg-3 mb-2 mb-lg-0 link-body-emphasis text-decoration-none d-none d-md-block"
-				style="width:250px">
+			<div class="d-flex align-items-start col-lg-3 mb-2 mb-lg-0 link-body-emphasis text-decoration-none d-none d-md-block oxool-logo"></div>
 			<div  id="__MODULE_TITLE__" class="w-100 text-center fw-bold fs-3"></div>
 			<button type="button" class="btn btn-link nav-link dropdown d-none d-md-block" color-scheme-switcher></button>
 			<div>
