admin: Fixed the error that the folding menu does not have a logo
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: I56cdcf1d66ab5e8a87e97ff0be83b003b07fe648

--- a/ossii/browser/admin/admin.html
+++ b/ossii/browser/admin/admin.html
@@ -66,9 +66,7 @@
 				<nav id="__SIDEBAR_MENU__" class="offcanvas-md offcanvas-start bg-body-tertiary" tabindex="-1">
 					<!-- 選單標題 -->
 					<div class="offcanvas-header">
-						<img src="images/online.svg"
-							class="d-flex align-items-center col-lg-3 mb-2 mb-lg-0 link-body-emphasis text-decoration-none"
-							style="width:250px">
+						<div class="d-flex align-items-center col-lg-3 mb-2 mb-lg-0 link-body-emphasis text-decoration-none oxool-logo"></div>
 						<button type="button" class="btn-close" data-bs-dismiss="offcanvas" data-bs-target="#__SIDEBAR_MENU__" aria-label="Close"></button>
 					</div>
 					<!-- 選單區 -->
