Fixed the problem of being unable to match service root.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: Ie0d0f063c584be66c5448a088a6249955ba77239

--- a/ossii/browser/admin/admin.html
+++ b/ossii/browser/admin/admin.html
@@ -19,6 +19,9 @@
 	<script src="%ADMIN_ROOT%/js/vex.combined.min.js"></script>
 	<script src="%ADMIN_ROOT%/js/global.js"></script>
 	<script src="%ADMIN_ROOT%/js/color-scheme-switcher.js"></script>
+	<script>
+		window.ServiceRoot = "%SERVICE_ROOT%";
+	</script>
 </head>
 
 <body>
